# mindinsight

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  NOTICE  OWNERS  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  requirements.txt  setup.py
.gitee/: PULL_REQUEST_TEMPLATE.md
docs/: README.md
docs/api_python/: mindconverter.rst  mindinsight.debugger.rst
ecosystem_tools/VulkanVision/: README.md
ecosystem_tools/mindconverter/: MANIFEST.in  README.md  README_CN.md  requirements.txt  setup.py
mindinsight/: __init__.py  __main__.py  _version.py
mindinsight/backend/: __init__.py  application.py  run.py
mindinsight/common/: __init__.py  util.py
mindinsight/conditionmgr/: condition.py  condition_list.py  conditionmgr.py  log.py  recommender.py
mindinsight/conf/: __init__.py  constants.py  defaults.py
mindinsight/datavisual/: __init__.py
mindinsight/debugger/: README.md  README_CN.md  __init__.py  debugger_cache.py  debugger_folder_analyzer.py  debugger_grpc_server.py  debugger_server.py  debugger_session.py  session_manager.py
mindinsight/explainer/: __init__.py
mindinsight/lineagemgr/: __init__.py  cache_item_updater.py  lineage_parser.py  model.py
mindinsight/mindconverter/: README.md  README_CN.md  __init__.py  ast_edits.py  cli.py  code_analysis.py  config.py  converter.py  enums.py  f_list.json  forward_call.py  funcs.py  nn_list.json  torch_dot_list.json
mindinsight/modelarts/: exceptions.py  notebook.py
mindinsight/optimizer/: __init__.py  cli.py  hyper_config.py  tuner.py
mindinsight/parser/: README.md  README_CN.md  dump.py
mindinsight/profiler/: README.md  README_CN.md  README_GPU.md  (+2 more)
tests/: __init__.py
(+1487 files in other folders)
